<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="65sp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/launcher"
        android:contentDescription="@string/launcher" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Username"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:inputType="text"
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passWord"
        android:layout_marginBottom="5dip"/>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/forgetPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/forgetPass"
        android:textSize="13sp"
        android:layout_marginBottom="25dp"/>

    <TextView
    android:id="@+id/Opensignup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/click_toJoin"
    android:textStyle="bold"
    android:textSize="18sp"
    android:gravity="center"/>


</LinearLayout>
