<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.nsromapa.android.signup_login.RegistrationActivity1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="75sp"
        app:srcCompat="@drawable/launcher"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/launcher"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Signup_bold"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#003569"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/signup_1st_page"
        android:textColor="#003569"
        android:textSize="14sp" />


        <TextView
            android:id="@+id/usernameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Username"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:inputType="text"
            android:id="@+id/regUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"/>

        <TextView
            android:id="@+id/emailTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Email"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/regemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:inputType="textEmailAddress"/>


        <Button
            android:id="@+id/btnNext1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Next"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"/>

        <TextView
            android:id="@+id/OpenLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Already_a_member_Log_in_Now"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"/>




</LinearLayout>
