<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.nsromapa.android.fogetpass.ForgetPassActivity2">

    <LinearLayout
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/sendForgVerif"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/userImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="35dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/userImage" />

            <TextView
                android:id="@+id/fullNmae"
                android:text="@string/your_full_name"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_width="200dp"
                android:textColor="#646464"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/lilNote"
                android:textAlignment="center"
                android:text="@string/click_to_get_email_notification"
                android:textSize="12sp"
                android:layout_width="200dp"
                android:textColor="#646464"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/ForgNotMyAC"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:text="@string/not_my_account"
                android:textColor="#003569"
                android:textStyle="bold"
                android:layout_marginTop="80dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="36dp"
                android:layout_marginEnd="36dp" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>
